# freefx

./: .gitignore  BUILD_VS_BUY.md  ISA.md  README.md  STATE.md  ab.py  autotune.py  bitcrush.py  chain.py  chorus.py  clipper.py  comp.py  deesser.py  delay.py  doubler.py  duck.py  dyneq.py  eq.py  exciter.py  flanger.py  formant.py  freefx.py  gate.py  harmonizer.py  irverb.py  master_assist.py  match.py  mbcomp.py  phaser.py  retro.py  rider.py  sat.py  smoke.py  texture.py  timefx.py  tplimit.py  transient.py  tremolo.py  verb.py  vocoder.py  (+1 more)
matches/: README.md  autotune-vs-Auburn_Sounds_Graillon_3.md  dyneq-vs-TDR_Nova.md  eq-vs-TDR_Nova.md  verb-vs-ValhallaSupermassive.md
vst3/: .gitignore  CMakeLists.txt  README.md  verify.py
vst3/bitcrush/: BitcrushProcessor.cpp  module.cmake
vst3/chorus/: ChorusProcessor.cpp  module.cmake
vst3/clipper/: ClipperProcessor.cpp  module.cmake
vst3/comp/: CompProcessor.cpp  module.cmake
vst3/deesser/: DeesserProcessor.cpp  module.cmake
vst3/delay/: DelayProcessor.cpp  module.cmake
vst3/doubler/: DoublerProcessor.cpp  module.cmake
vst3/dsp/: Biquad.h  DryDelay.h  ParameterHelpers.h  ToneFilter.h
vst3/duck/: DuckProcessor.cpp  module.cmake
vst3/dyneq/: DyneqProcessor.cpp  module.cmake
vst3/eq/: EqProcessor.cpp  module.cmake
vst3/exciter/: ExciterProcessor.cpp  module.cmake
vst3/flanger/: FlangerProcessor.cpp  module.cmake
vst3/gate/: GateProcessor.cpp  module.cmake
vst3/irverb/: IrVerbProcessor.cpp  module.cmake
vst3/mbcomp/: MbcompProcessor.cpp  module.cmake
vst3/phaser/: PhaserProcessor.cpp  module.cmake
vst3/sat/: SatProcessor.cpp  module.cmake
vst3/texture/: TextureProcessor.cpp  module.cmake
vst3/tplimit/: TplimitProcessor.cpp  module.cmake
vst3/transient/: TransientProcessor.cpp  module.cmake
vst3/tremolo/: TremoloProcessor.cpp  module.cmake
vst3/verb/: Freeverb.h  VerbProcessor.cpp  module.cmake
vst3/vocoder/: VocoderProcessor.cpp  module.cmake
vst3/width/: WidthProcessor.cpp  module.cmake
